# raiden-pico

./: .gitattributes  .gitignore  CHANGELOG.md  CHIPSHOT_UART.md  CLAUDE.md  CMakeLists.txt  CRP_TRACE_FINDINGS.md  EFM32_GLITCH.md  EXPLORATION_SUMMARY.md  GLITCHING_GUIDE.md  GLITCH_TEST_RESULTS.md  GPIO_TRIGGER_BUG_FOUND.md  IMPLEMENTATION.md  MARATHON_TEST_SUMMARY.md  NRF52840_APPROTECT.md  NRF52840_GLITCH_SETUP.md  NRF52840_WIRING_POWERCYCLE.md  NRF52840_WIRING_RESET.md  PIC18_ICSP.md  PIO_ARCHITECTURE.md  PLATFORM_GUIDE.md  README.md  README_IMPLEMENTATION.md  SHORTCUTS.md  SUCCESS_FOUND.md  TARGET_UART.md  VMIN.md  build.sh  csv_to_heatmap.py  debug_flash_read.py  glitch_heatmap.py  glitch_results.csv  glitch_results_20251028_081812.csv  glitch_results_20251028_090053.csv  grid_scan.py  grid_scan_simple.py  jtag_glitch_heatmap.py  picoprobe.cfg  picoprobe_rp2350.cfg  picoprobe_slow.cfg  (+12 more)
.claude/: settings.local.json
docs/: campaign_20251231_crp2_bypass.md  datasheets.md
examples/: heatmap_example.html
images/: crp1_test.hex  crp2_test.hex  crp3_test.hex
include/: chipshot_uart.h  command_parser.h  config.h  efm32_target.h  glitch.h  grbl.h  jtag.h  lpc_target.h  nrf_target.h  pic18_target.h  platform.h  stm32_breakpoints.h  stm32_pwner.h  swd.h  target_uart.h  uart_cli.h
lpc2468/: README.md  lpc2468_boot_timing_analysis.md  lpc2468_isp_timing_analysis.md
openocd/: lpc2478_no_checksum.cfg
scripts/: NRF_README.md  PIC_README.md  README.md  adaptive_glitch_explorer.py  adaptive_voltage_test.py  analyze_glitch_results.py  auto_glitch_explorer.py  colors.py  (+53 more)
(+66 files in other folders)
